[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-load-balancer"
version = "0.1.0"
description = "An educational asyncio Layer 4 TCP load balancer"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Load Balancer Capstone"}]
dependencies = []
keywords = ["load-balancer", "asyncio", "tcp", "proxy", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Internet :: Proxy Servers",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
load-balancer = "load_balancer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
load_balancer = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
